--- a/assets/scripts/templates/remove-building.handlebars
+++ b/assets/scripts/templates/remove-building.handlebars
@@ -1,1 +1,1 @@
-<button class="btn btn-danger remove-building" data-id="{{id}}">Delete</button>"
+<!-- <button class="btn btn-danger remove-building" data-id="{{id}}">Delete</button>" -->
