--- a/assets/scripts/templates/building-listing.handlebars
+++ b/assets/scripts/templates/building-listing.handlebars
@@ -1,5 +1,5 @@
   {{#each buildings as |building|}}
-    <section data-id="{{building.id}}">
+    <section data-id="{{building.id}}" class="boxStyle">
         <h6>Building ID:</h6>
         <p>
         {{#if building.id}}
@@ -24,5 +24,6 @@
           {{building.sq_feet}}
         {{/if}}
       </p>
+      {{> remove-building }}
     </section>
     {{/each}}
